--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,5 +1,7 @@
 <!doctype html>
 <title>Song Recommend</title>
+<script type="text/javascript" href="{{ url_for('static', filename='jquery-1.11.2.min.js') }}"></script>
+<script type="text/javascript" href="{{ url_for('static', filename='script.js') }}"></script>
 <div class=page>
   <h1>Song Recommend</h1>
   {% block body %}{% endblock %}
