--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <title>Song Recommend</title>
-<script type="text/javascript" href="{{ url_for('static', filename='jquery-1.11.2.min.js') }}"></script>
-<script type="text/javascript" href="{{ url_for('static', filename='script.js') }}"></script>
-<div class=page>
   <h1>Song Recommend</h1>
   {% block body %}{% endblock %}
+  <script type="text/javascript" src="http://localhost:8080/static/jquery-1.11.2.min.js"></script>
+  <script type="text/javascript" src="http://localhost:8080/static/script.js"></script>
+  <div class=page>
 </div>
