Added working color

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,6 +32,7 @@
   <!-- Twitter login -->
   {% if twitter %}
     <h2>Logged in to Twitter</h2>
+    Your color is <strong>{{ color }}</strong>
   {% else %}
     <h2>Login to Twitter</h2>
   {% endif %}
