--- a/templates/index.html
+++ b/templates/index.html
@@ -41,17 +41,17 @@
 
   <!-- Twitter login -->
   {% if twitter %}
-    <h2>Logged in to Twitter</h2>
+    <h2>Twitter details</h2>
     Your color is <strong id="current-color">{{ color }}</strong>
   {% else %}
-    <h2>Login to Twitter</h2>
+    <h2>Enter Twitter username</h2>
   {% endif %}
   <form action="{{ url_for('index', token=token, twitter=username) }}" method=get>
     <dl>
       <dt>Username:
       <dd><input type=text name=twitter value="{{ twitter }}"></dd>
       <dd><input type=text name=token value="{{ token }}" style="visibility: hidden;"></dd>
-      <dd><input type=submit value=Login></dd>
+      <dd><input type=submit value=Submit></dd>
     </dl>
   </form>
 
