--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,8 +1,65 @@
 <!doctype html>
-<title>Song Recommend</title>
-  <h1>Song Recommend</h1>
+<html lang="en">
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
+<title>Song Recommendation</title>
+<link href="static/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="static/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+</head>
+
+<body>
   {% block body %}{% endblock %}
   <script type="text/javascript" src="http://localhost:8080/static/jquery-1.11.2.min.js"></script>
   <script type="text/javascript" src="http://localhost:8080/static/script.js"></script>
   <div class=page>
 </div>
+
+
+ <!--  Scripts-->
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="static/js/materialize.js"></script>
+  <script src="static/js/init.js"></script>
+  <script src="static/js/jquery-ui.min.js"></script> 
+  <script src="static/js/animated_bg.js"></script>
+
+
+<script>
+$( ".set_twitter_btn" ).click(function() {
+  /*
+  $( ".overlay" ).animate({
+    opacity: 0.3
+  }, 1500 );
+*/
+var _username = $("#twitter_username").val();
+ function complete() {
+    $( ".card2" ).fadeIn( 1000, "linear");
+    var _href = $("#connect_spotify_btn").attr("href");
+    $("#connect_spotify_btn").attr("href", _href + _username);
+  }
+  $( ".card1" ).fadeOut( 1000, "linear", complete );
+});
+
+jQuery(document).ready(function(){
+  $( ".card2" ).hide();
+$('.overlay').animatedBG({
+      colorSet: ["#0277bd", "#00838f", "#00695c", "#2e7d32", "#e65100", "#6a1b9a", "#4527a0", "#283593", "#1565c0"],
+      speed: 2000
+    });
+  });
+</script>
+
+
+
+<style>
+html, body{
+  height: 100%;
+}
+.overlay{
+  background-color: #0277bd;
+  height: 100%;
+}
+</style>
+
+  </body>
+</html>
