--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,13 @@
 
         <div class="card-reveal">
           <span class="card-title grey-text text-darken-4">Note <i class="mdi-navigation-close right"></i></span>
-          <p>Connect Song Recommendation to your Spotify account, Song Recommendation will be able to read your birth date, country, and saved tracks.</p>
+          <p>Connect Song Recommendation to your Spotify account, Song Recommendation will be able to read your 
+            <ul>
+              <li>birth date</li>
+              <li>country</li>
+              <li>saved tracks</li>
+            </ul>
+            </p>
         </div>
       </div>
 
