change font size

--- a/templates/home.html
+++ b/templates/home.html
@@ -13,13 +13,13 @@
 
 <body>
   <nav class="light-blue lighten-1" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">CS4242 project</a>
+    <div class="nav-wrapper container"><a href="/home">Song Recommendation v1.0</a>
 
     </div>
   </nav>
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
-      <h1 class="header center orange-text">Song Recommendation</h1>
+      <h4 class="header center orange-text">Song Recommendation</h4>
       <div class="row center">
         <h5 class="header col s12 light">An intelligent song recommendation application based on social media</h5>
       </div>
